--- a/field.tex
+++ b/field.tex
@@ -96,7 +96,7 @@ In this contribution, the effect of the electric field on the measured potential
 \section{Materials and methods}
 
 The preparation of solid contact Mg$^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber and subsequently doped in KCl solution. The membrane components were purchased from Fluka (Buchs, Switzerland).
-The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3.
+The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. Further characterization, regarding the resistance, response time, selectivity coefficients etc. can be reed in \cite{overmg3, mihaela mg}
 
 The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
@@ -205,7 +205,8 @@ Journal of the Electrochemical Society  160 (2013) 451-459.
 \bibitem{SRET2}V.S. Voruganti, H.B. Luft, D. DeGeer, S.A. Bradford, Scanning reference electrode technique for the investigation of preferential corrosion of weldments in offshore applications, Corrosion 47 (1991) 343–351.
 \bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, Journal of The Electrochemical Society 119 (1972) 1628–1632.
 \bibitem{SRET4}N. Hsu, J.D. Garber, R. Brunel, R.D. Braun, A scanning reference electrode for use during corrosive measurements, Corrosion 43 (1987) 606–610.
-\bibitem{SVET}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.   
+\bibitem{SVET}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.
+\bibitem{mihaela mg} M. Calugareanu, G. Nagy, A.M. Josceanu, L. Nagy, Ion selective electrodes for microalgal biotechnology, Revista de Chimie 64 (2013) 205-209.
 
 
 \end{thebibliography}
