--- a/field.tex
+++ b/field.tex
@@ -100,7 +100,7 @@ The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl
 
 The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
-SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia). The tip-sample distance was determined using the method described in \cite{overmg3}. The Z approaching curves were recorded with 10 $\upmu$m resolution and 33 $\upmu$m/s scanning rate. The 2D scans were carried out with100 $\upmu$m resolution and 100 $\upmu$m/s following the widely applied meander algorithm.
+SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia). The testing electrolyte was 0.001 M NaCl solution throughout this work. The tip-sample distance was determined using the method described in \cite{overmg3}. The Z approaching curves were recorded with 10 $\upmu$m resolution and 33 $\upmu$m/s scanning rate. The 2D scans were carried out with100 $\upmu$m resolution and 100 $\upmu$m/s following the widely applied meander algorithm.
 
 \section{Results and discussion}
 
