--- a/field.tex
+++ b/field.tex
@@ -129,15 +129,6 @@ An attempt was made to distinguish the effect of the electric field from that of
 \addplot [line width=0.5mm, domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14.txt};
 \addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {15.txt};
 \addplot [line width=0.5mm, domain=0:1000, color=cyan, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {16_field.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14_diff.txt};
-
-
-
 \node[anchor=north east] at (rel axis cs:0.98,0.98) {A};
 
 \node[red, left] at (axis cs:100,-65) {a};
@@ -164,10 +155,36 @@ An attempt was made to distinguish the effect of the electric field from that of
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
+\begin{axis}[ymin=-80, ymax=80, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left, ytick={-75, -50, -25, 0, 25, 50, 75}]
+\addplot [line width=0.5mm, domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {1.txt};
+\addplot [line width=0.5mm, domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {8.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12.txt};
+\addplot [line width=0.5mm, domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13.txt};
+\addplot [line width=0.5mm, domain=0:1000, color=cyan, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {16_field.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9_diff.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10_diff.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11_diff.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12_diff.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13_diff.txt};
+\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14_diff.txt};
+
+\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
+
+\node[red, left] at (axis cs:100,-48) {b};
+\node[blue, left] at (axis cs:100,-9) {c};
+\node[blue, left] at (axis cs:100,67) {d};
+\node[cyan, left] at (axis cs:100,45) {f};
+\end{axis}
+\end{tikzpicture}
+
+\begin{tikzpicture}
 \begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
 \addplot [domain=-30:100, color=red, mark=*] table {on_off_100.txt};
 \addplot [domain=-30:100, color=blue, mark=*] table {on_off_1000.txt};
-\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
+\node[anchor=north east] at (rel axis cs:0.98,0.98) {C};
 \node[red, above right] at (axis cs:40,20) {h = 100 $\upmu$m};
 \node[blue, above right] at (axis cs:40,-50) {h = 1000 $\upmu$m};
 \draw [black, ->] (axis cs:320,125) -- (axis cs:320,100);
