--- a/field.tex
+++ b/field.tex
@@ -98,7 +98,7 @@ In this contribution, the effect of the electric field on the measured potential
 The preparation of solid contact Mg$^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber and subsequently doped in KCl solution. The membrane components were purchased from Fluka (Buchs, Switzerland).
 The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3.
 
-The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
+The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
 SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia).
 
