--- a/field.tex
+++ b/field.tex
@@ -100,7 +100,7 @@ The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl
 
 The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
-SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia). The testing electrolyte was 0.001 M NaCl solution throughout this work. The tip-sample distance was determined using the method described in \cite{overmg3}. The Z approaching curves were recorded with 10 $\upmu$m resolution and 33 $\upmu$m/s scanning rate. The 2D scans were carried out with100 $\upmu$m resolution and 100 $\upmu$m/s following the widely applied meander algorithm.
+SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured with respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia). The testing electrolyte was 0.001 M NaCl solution throughout this work. The tip-sample distance was determined using the method described in \cite{overmg3}. The Z approaching curves were recorded with 10 $\upmu$m step size and 33 $\upmu$m/s effective scanning rate. The 2D scans were carried out with 100 $\upmu$m step size in both X and Y axes, and 100 $\upmu$m/s scanning rate following the widely applied meander algorithm.
 
 \section{Results and discussion}
 
@@ -155,36 +155,10 @@ An attempt was made to distinguish the effect of the electric field from that of
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
-\begin{axis}[ymin=-80, ymax=80, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left, ytick={-75, -50, -25, 0, 25, 50, 75}]
-\addplot [line width=0.5mm, domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {1.txt};
-\addplot [line width=0.5mm, domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {8.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12.txt};
-\addplot [line width=0.5mm, domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13.txt};
-\addplot [line width=0.5mm, domain=0:1000, color=cyan, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {16_field.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13_diff.txt};
-\addplot [domain=0:1000, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14_diff.txt};
-
-\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
-
-\node[red, left] at (axis cs:100,-48) {b};
-\node[blue, left] at (axis cs:100,-9) {c};
-\node[blue, left] at (axis cs:100,67) {d};
-\node[cyan, left] at (axis cs:100,45) {f};
-\end{axis}
-\end{tikzpicture}
-
-\begin{tikzpicture}
 \begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
 \addplot [domain=-30:100, color=red, mark=*] table {on_off_100.txt};
 \addplot [domain=-30:100, color=blue, mark=*] table {on_off_1000.txt};
-\node[anchor=north east] at (rel axis cs:0.98,0.98) {C};
+\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
 \node[red, above right] at (axis cs:40,20) {h = 100 $\upmu$m};
 \node[blue, above right] at (axis cs:40,-50) {h = 1000 $\upmu$m};
 \draw [black, ->] (axis cs:320,125) -- (axis cs:320,100);
