--- a/field.tex
+++ b/field.tex
@@ -141,16 +141,16 @@ An attempt was made to distinguish the effect of the electric field from that of
 \draw [line width=0.25mm, black, ->] (axis cs:800,-53.5) -- (axis cs:800,-49);
 \node[black, left] at (axis cs:800,-58) {$\Delta$E$_0$};
 
-\draw [line width=0.25mm, black, ->] (axis cs:800,-49) -- (axis cs:800,-22);
+\draw [line width=0.25mm, black, ->] (axis cs:800,-49) -- (axis cs:800,-21.5);
 \node[black, left] at (axis cs:800,-36) {$\Delta$E$_1$};
 
-\draw [line width=0.25mm, black, ->] (axis cs:800,-22) -- (axis cs:800,14);
+\draw [line width=0.25mm, black, ->] (axis cs:800,-21.4) -- (axis cs:800,13.5);
 \node[black, left] at (axis cs:800,10) {$\Delta$E$_2$};
 
-\draw [line width=0.25mm, black, ->] (axis cs:830,14) -- (axis cs:830,-18);
+\draw [line width=0.25mm, black, ->] (axis cs:830,13.5) -- (axis cs:830,-18);
 \node[black, right] at (axis cs:830,5) {$\Delta$E$_3$};
 
-\draw [line width=0.25mm, black, ->] (axis cs:830,-49) -- (axis cs:830,-18);
+\draw [line width=0.25mm, black, ->] (axis cs:830,-49.5) -- (axis cs:830,-18);
 \node[black, right] at (axis cs:830,-36) {$\Delta$E$_4$};
 \end{axis}
 \end{tikzpicture}
@@ -167,7 +167,7 @@ An attempt was made to distinguish the effect of the electric field from that of
 \node[black, above] at (axis cs:460,125) {off};
 \end{axis}
 \end{tikzpicture}
-\caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red (a-b) = spontaneous corrosion, dashed blue (c-d) = galvanic corrosion, dash dotted green (e) = spontaneous corrosion. Solid cyan (f) was derived by substracting b from c. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
+\caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red (a-b) = spontaneous corrosion, dashed blue (c-d) = galvanic corrosion, dash dotted green (e-) = spontaneous corrosion. Solid cyan (f) was derived by substracting b from c. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
 \label{fig:approach}
 \end{figure}
 
