--- a/field.tex
+++ b/field.tex
@@ -84,7 +84,7 @@ The potential difference between the points where the electrodes are located is 
 where $\Delta E$ is the measured potential difference, $E_R$ is the potential of the reference electrode, and $\phi_M$ and $\phi_R$ are the local potentials in the electric field at the measuring and reference electrodes, respectively. $E_M$ is the potential of the measuring ion-selective electrode for instance Mg$^{2+}$:
 
 \begin{equation}
-E_M = S \times lg[Mg^{2+}] + E_M^o
+E_M = S \times \lg[\textrm{Mg}^{2+}] + E_M^o
 \label{eq:measuring}
 \end{equation}
 
@@ -96,7 +96,7 @@ In this contribution, the effect of the electric field on the measured potential
 \section{Materials and methods}
 
 The preparation of solid contact Mg$^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber and subsequently doped in KCl solution. The membrane components were purchased from Fluka (Buchs, Switzerland).
-The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. Detailed characterization of the ISME regarding the resistance, response time, selectivity coefficients etc. can be found in \cite{overmg3, mihaela mg}.
+The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. Detailed characterization of the ISME regarding the resistance, response time, selectivity coefficients etc. can be found in \cite{overmg3, mihaelamg}.
 
 The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
@@ -104,9 +104,9 @@ SECM experiments were carried out using a homemade instrument operated with cust
 
 \section{Results and discussion}
 
-A series of consecutive Z-approach curves were recorded above the corroding AZ63 sample (as shown in fig. \ref{fig:approach}A). The first 6 measurements were taken while the AZ63 sample was not electrically connected to the iron sample (red lines, a-b). As expected, Mg$^{2+}$ activity slowly increased with time as a result of spontaneous corrosion. The overall change was about 10 mV in 5 minutes. Next, the two metals were connected at the rear of the mould. As result of establishing the galvanic connection, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from b to c, depicted by $\Delta E_1$ in fig. \ref{fig:approach}A). Since the galvanic coupling was established while the scanning tip was located 1000 $\upmu$m from the AZ63 sample, the reported change cannot possibly be attributed solely to an abrupt increase in Mg$^{2+}$ activity. Indeed, such a 40 mV change would correspond to an increase of ca. 1.5 orders of magnitude in Mg$^{2+}$ activity occuring in less than one second. Immediately after, six additional Z-approach curves were recorded during the galvanic coupling. The resulting accelerated dissolution of Mg$^{2+}$ can be distinguished from the blue curves (c-d) in fig. \ref{fig:approach}A. Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noisy curves recorded in this case. During this period of galvanic coupling, the potential sensed at the ISME, when situated at h = 1000 $\upmu$m, increased in app. 40 mV. This rise ($\Delta E_2$) can be totally attributed to the increase in activity of the dissolving metal, i.e.: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Finally, when the galvanic connection was stopped, 2 additional Z-approach curves were measured (green curves in fig. \ref{fig:approach}A). A sudden jump in potential ($\Delta E_3$, transition from d to e) can be observed, of the same magnitude as before, though in the opposite direction, as a result of electric field vanishing. The shape of the latest Z-approach curves is very similar to the initial approaching curves recorded before galvanic connection was established, though they are shifted by about 40 mV in the positive direction. This is the result of the enhanced corrosion during the second phase of the experiment; Mg$^{2+}$ activity changed by about the same factor along the length of the scan-line. The shape of the Z-approach curves recorded during the galvanic coupling is notoriously different from those recorded during the spontaneous corrosion of the metal. This is because the contribution of the electric field, just like the contribution from Mg$^{2+}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable from these plots.
+A series of consecutive Z-approach curves were recorded above the corroding AZ63 sample (as shown in fig. \ref{fig:approach}A). The first 6 measurements were taken while the AZ63 sample was not electrically connected to the iron sample (red lines, \emph{a-b}). As expected, Mg$^{2+}$ activity slowly increased with time as a result of spontaneous corrosion. The overall change was about 10 mV in 5 minutes. Next, the two metals were connected at the rear of the mould. As result of establishing the galvanic connection, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from \emph{b} to \emph{c}, depicted by $\Delta E_1$ in fig. \ref{fig:approach}A). Since the galvanic coupling was established while the scanning tip was located 1000 $\upmu$m from the AZ63 sample, the reported change cannot possibly be attributed solely to an abrupt increase in Mg$^{2+}$ activity. Indeed, such a 40 mV change would correspond to an increase of ca. 1.5 orders of magnitude in Mg$^{2+}$ activity occuring in less than one second. Immediately after, six additional Z-approach curves were recorded during the galvanic coupling. The resulting accelerated dissolution of Mg$^{2+}$ can be distinguished from the blue curves (\emph{c-d}) in fig. \ref{fig:approach}A. Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noisy curves recorded in this case. During this period of galvanic coupling, the potential sensed at the ISME, when situated at h = 1000 $\upmu$m, increased in app. 40 mV. This rise ($\Delta E_2$) can be totally attributed to the increase in activity of the dissolving metal, i.e.: $\Delta E = 29.5 \; \textrm{mV} \times \Delta \lg[\textrm{Mg}^{2+}]$. Finally, when the galvanic connection was stopped, 2 additional Z-approach curves were measured (green curves in fig. \ref{fig:approach}A). A sudden jump in potential ($\Delta E_3$, transition from \emph{d} to \emph{e}) can be observed, of the same magnitude as before ($\Delta E_1$), though in the opposite direction, as a result of electric field vanishing. The shape of the latest Z-approach curves is very similar to the initial approaching curves recorded before galvanic connection was established (\emph{a-b}), though they are shifted by about 40 mV in the positive direction ($\Delta E_4$). This is the result of the enhanced corrosion during the second phase of the experiment; Mg$^{2+}$ activity changed by about the same factor along the length of the scan-line. The shape of the Z-approach curves recorded during the galvanic coupling is notoriously different from those recorded during the spontaneous corrosion of the metal. This is because the contribution of the electric field, just like the contribution from Mg$^{2+}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable from these plots.
 
-An attempt was made to distinguish the effect of the electric field from that of the Nernstian response of the ISME \cite{reviewer2} by substracting curve \emph{b} from the subsequent curve \emph{c}. \emph{B} is the result of the Nernstian response, while \emph{c} features the contribution from the electric field as well. Since \emph{c} was recorded just after \emph{b} in a short period of time, it can be assumed that there was no significant increase of Mg$^{2+}$ concentration during these two scans, therefore \emph{c} is just \emph{b}+$\Delta \phi$. The result of the substraction is curve \emph{f} in fig. \ref{fig:approach}A, which can be regarded as the effect of the electric field formed between the galvanic pair.
+An attempt was made to distinguish the effect of the electric field from that of the Nernstian response of the ISME \cite{reviewer2} throughout the whole scanline by substracting curve \emph{b} from the subsequent curve \emph{c}. \emph{B} is the result of the Nernstian response, while \emph{c} features the contribution from the electric field as well. Since \emph{c} was recorded just after \emph{b} in a short period of time, it can be assumed that there was no significant increase of Mg$^{2+}$ concentration during these two scans, therefore \emph{c} is just \emph{b}+$\Delta \phi$. The result of the substraction is curve \emph{f} in fig. \ref{fig:approach}A, which can be regarded as the effect of the electric field formed between the galvanic pair.
 
 \begin{figure}
 \centering
@@ -167,7 +167,7 @@ An attempt was made to distinguish the effect of the electric field from that of
 \node[black, above] at (axis cs:460,125) {off};
 \end{axis}
 \end{tikzpicture}
-\caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red (a-b) = spontaneous corrosion, dashed blue (c-d) = galvanic corrosion, dash dotted green (e-) = spontaneous corrosion. Solid cyan (f) was derived by substracting b from c. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
+\caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red (a-b) = spontaneous corrosion, dashed blue (c-d) = galvanic corrosion, dash dotted green (e-) = spontaneous corrosion. Solid cyan (f) was derived by substracting b from c. $\Delta E_0$ = potential increase due to spontaneous corrosion of AZ63, $\Delta E_1$ = potential jump due to the electric field appearing as a consequence of galvanic coupling established, $\Delta E_2$ = potential increase caused by the increase in Mg$^{2+}$ activity during galvanic corrosion, $\Delta E_3$ = potential jump associated with the electric field ceasing, $\Delta E_4$ = difference between \emph{b} and \emph{e}, the same as $\Delta E_2$. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
 \label{fig:approach}
 \end{figure}
 
@@ -231,7 +231,7 @@ Journal of the Electrochemical Society  160 (2013) 451-459.
 \bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, Journal of The Electrochemical Society 119 (1972) 1628–1632.
 \bibitem{SRET4}N. Hsu, J.D. Garber, R. Brunel, R.D. Braun, A scanning reference electrode for use during corrosive measurements, Corrosion 43 (1987) 606–610.
 \bibitem{SVET}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.
-\bibitem{mihaela mg} M. Calugareanu, G. Nagy, A.M. Josceanu, L. Nagy, Ion selective electrodes for microalgal biotechnology, Revista de Chimie 64 (2013) 205-209.
+\bibitem{mihaelamg} M. Calugareanu, G. Nagy, A.M. Josceanu, L. Nagy, Ion selective electrodes for microalgal biotechnology, Revista de Chimie 64 (2013) 205-209.
 \bibitem{reviewer2} Comment raised by a reviewer to the manuscript. Authors are greatly indebted for the valuable contribution.
 \end{thebibliography}
 
