affiliations almost fixed

--- a/field.tex
+++ b/field.tex
@@ -21,17 +21,19 @@
 
 \title{The effect of electric field on potentiometric Scanning Electrochemical Microscopic imaging}
 \cortext[cor]{Corresponding author}
-\author[akiss]{András Kiss\corref{cor}}
-\address[akiss, gnagy]{Department of General and Physical Chemistry, Faculty of Sciences, University of Pécs, 7624 Pécs, Ifjúság útja 6, Hungary}
-\address[rmsouto]{Department Chemistry, Universidad de La Laguna, P.O. Box 456, E-38200 La Laguna (Tenerife), Spain}
-%\address[akiss, gnagy]{János Szentágothai Research Centre, University of Pécs, 7624 Pécs, Ifjúság Útja 20, Hungary}
+
+\author[akiss]{András Kiss\corref{cor}$^{a,b,}$}
 \ead{akiss@gamma.ttk.pte.hu}
-\author[dfilotas]{Dániel Filotás}
+\author[dfilotas]{Dániel Filotás$^{a,b,}$}
 \ead{filotasdaniel@gmail.com}
-\author[rmsouto]{Ricardo M. Souto}
+\author[rmsouto]{Ricardo M. Souto$^{c,}$}
 \ead{rsouto@ull.es}
-\author[gnagy]{Géza Nagy}
+\author[gnagy]{Géza Nagy$^{a,b,}$}
 \ead{g-nagy@gamma.ttk.pte.hu}
+
+\address[]{Department of General and Physical Chemistry, Faculty of Sciences, University of Pécs, 7624 Pécs, Ifjúság útja 6, Hungary}
+\address[]{János Szentágothai Research Centre, University of Pécs, 7624 Pécs, Ifjúság Útja 20, Hungary}
+\address[]{Department Chemistry, Universidad de La Laguna, P.O. Box 456, E-38200 La Laguna (Tenerife), Spain}
 
 
 \begin{abstract}
